2007-06-25 Jan Kryl (version 1.4.1)

	* Viewport of client's document identifing an error was cut out
	without proper modifications, which resulted in usage of namespaces
	which were not defined. This is fixed now.

version 1.4.0

	* Configuration utilities (apr-config, apxs, pkg-config) are run
	as part of configure rather than in makefile. Makefile gets real
	parameters and not just paths of these utilities. I belive it's
	more correct solution.

	* Missing tests for header files as well as errors in 'with' parameters
	in configure.ac were corrected.

	* mod_eppd creates "dummy answer" if it cannot get response from
	some reason from CORBA server. Dummy answer looks like normal error
	response, but the svtrid is faked. If the error occures during
	the first greeting, the mod_eppd closes the connection without
	responding with error message, which is the same behaviour as before.

	* Again changes in XML schemas, see schemas' changelog for more
	information. Schemas versions were bumped up.

version 1.3.1

	* New 'tempcontact' element in domain, new technical check interface
	... see changelog of XML schemas.

version 1.3.0

	* The client provided values which caused errors repeated in error
	message are now taken directly from input document, rather than
	constructed ad-hoc as it was before. At source code level this implies
	that parsed document and its context must be attached to command
	structure and is freed after the whole request is proccessed.

	* New CORBA backend which exploits better possibility of exceptions
	is in place. The return codes are no more overloaded.

	* Functions for logging were exported in other components of mod_eppd.
	This results in better error reporting in log file, which was not
	possible when we identified problem just based on return code.

	* The code of epp-client.c was restructured and is more readable than
	it was.

version 1.2.1

	* Bugfix - instead of EPP protocol version was in greeting mod_eppd's
	version.

version 1.2.0