@@ -1,3 +1,12 @@
+2006-06-26 Jan Kryl (version 1.5.0)
+
+	* New status flags for domain object were added (serverBlocked,
+	serverOutzoneManual, serverInzoneManual, expired, outzone,
+	notValidated).
+
+	* Identification type "birth number" (in czech: rodne cislo) was
+	removed.
+
 2006-05-16 Jan Kryl (version 1.4.0)
 
 	* It's possible to control disclosure of vat, ident and notifyEmail
